argocd/k8s/n8n/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: n8n
  namespace: n8n
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: n8n
